<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/amarillo2"
    tools:context=".activities.RegistrarseActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo" />

    <TextView

        android:id="@+id/textViewCrearCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/textViewCrearCuenta"
        android:textColor="@color/verde2"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <!--cardView -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="381dp"
        android:layout_height="400dp"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@color/blanco"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCrearCuenta"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            tools:layout_editor_absoluteX="0dp">

            <EditText
                android:id="@+id/inputNombreUsuario"
                android:layout_width="330dp"
                android:layout_height="46dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/inputNombreUsuario"
                android:inputType="textPersonName"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/verde3"
                android:textColorHint="@color/verde2"
                android:backgroundTint="@color/amarillo1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:importantForAutofill="no" />

            <EditText

                android:id="@+id/inputCorreo"
                android:layout_width="330dp"
                android:layout_height="46dp"
                android:layout_marginTop="20dp"
                android:hint="@string/inputCorreo"
                android:inputType="textPersonName"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/verde3"
                android:textColorHint="@color/verde2"
                android:backgroundTint="@color/amarillo1"
                app:layout_constraintStart_toStartOf="@+id/inputNombreUsuario"
                app:layout_constraintTop_toBottomOf="@+id/inputNombreUsuario"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/inputContrasena"
                android:layout_width="330dp"
                android:layout_height="46dp"
                android:layout_marginTop="20dp"
                android:hint="@string/inputContrasena"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/verde3"
                android:textColorHint="@color/verde2"
                android:backgroundTint="@color/amarillo1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/inputCorreo"
                app:layout_constraintTop_toBottomOf="@+id/inputCorreo"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/inputConfirmarContrasena"
                android:layout_width="330dp"
                android:layout_height="46dp"
                android:layout_marginTop="20dp"
                android:drawablePadding="10dp"
                android:hint="@string/inputConfirmarContrasena"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/verde3"
                android:textColorHint="@color/verde2"
                android:backgroundTint="@color/amarillo1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/inputContrasena"
                app:layout_constraintTop_toBottomOf="@+id/inputContrasena"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/btnRegistrarse"
                android:layout_width="148dp"
                android:layout_height="38dp"
                android:layout_marginTop="24dp"
                android:background="@color/amarillo1"
                android:text="@string/btnRegistrarse"
                android:textAllCaps="false"
                android:textColor="@color/verde1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputConfirmarContrasena" />

            <TextView
                android:id="@+id/textViewTienesCuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/textViewTienesCuenta"
                android:textColor="@color/verde3"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnRegistrarse"
                app:layout_constraintVertical_bias="0.117" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>

